# MCRT

./: .gitignore  LICENSE  README.md  clonedir.py  dev.md  mcrt.py  media_tool_cli.py  media_ui.py  notes.txt  pyproject.toml  requirements.txt  setup.py  start_media_ui.sh  ui.py
media_tool/: __init__.py  __main__.py  config.py  grouping.py  jsonio.py  main.py  writer.py
media_tool/checkpoint/: __init__.py  manager.py
media_tool/commands/: __init__.py  checkpoint.py  review.py  scan.py  stats.py
media_tool/database/: __init__.py  init.py  manager.py  schema.py  schema.sql
media_tool/models/: __init__.py  checkpoint.py  file_record.py
media_tool/scanning/: __init__.py  detector.py  discovery.py  extractor.py  pipeline.py  scanner.py  scanner.py.bak
media_tool/storage/: __init__.py  drive.py
media_tool/tests/: image_matching_t.py  pytests.ini  run_tests.py  test_cli_commands.py  validate_setup.py
media_tool/tests/fixtures/: test_db_setup.py
media_tool/utils/: __init__.py  path.py  time.py  timeouts.py
media_ui/: README.md  __init__.py  __main__.py  app.py  cli_interface.py  config.py  media_tool_cli.py  requirements.txt
media_ui/static/css/: base.css  components.css  images.css  layout.css  style.css  variables.css
media_ui/static/js/: app.js
media_ui/templates/: base.html  bulk.html  dashboard.html  error.html  export.html  groups.html  singles.html
tests/: gen_test_images.py
