[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "media-consolidation-tool"
version = "2.0.0"
description = "Enhanced media consolidation and review tool with checkpoint support"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [{ name = "Media Tool Team" }]

dependencies = [
  "Pillow>=8.0.0",
  "imagehash>=4.0.0",
  "tqdm>=4.50.0",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Graphics",
  "Topic :: System :: Archiving",
]

[project.scripts]
media-tool = "media_tool.main:main"
media-ui = "media_ui.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["media_tool*", "media_ui*"]

[tool.setuptools.package-data]
"media_tool.database" = ["schema.sql"]
